--- a/doc/doc.css
+++ b/doc/doc.css
@@ -1,33 +1,48 @@
 <style>
 @font-face {
-  font-family: 'Luculent';
-  src: url('/_fonts/luculent/luculentb.ttf') format('truetype');
+  font-family: 'lucida-grande';
+  src: url('/_fonts/lg/LucidaGrande-Regular.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'lucida-grande';
+  src: url('/_fonts/lg/LucidaGrande-Bold.otf');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Luculent';
-  src: url('/_fonts/luculent/luculentbi.ttf') format('truetype');
-  font-weight: bold;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Luculent';
-  src: url('/_fonts/luculent/luculenti.ttf') format('truetype');
+  font-family: 'lucida-grande';
+  src: url('/_fonts/lg/LucidaGrande-Italic.otf');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'Luculent';
-  src: url('/_fonts/luculent/luculent.ttf') format('truetype');
+  font-family: 'lucida-grande';
+  src: url('/_fonts/lg/LucidaGrande-BoldItalic.otf');
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'apl';
+  src: url('/_fonts/Apl385.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 * {
-  font-family: Luculent, monospace !important;
+  font-family: lucida-grande !important;
+}
+
+body {
+  max-width: 50em !important;
+}
+
+pre, code, .sourceCode, .sourceCode * {
+  font-family: apl, monospace !important;
 }
 </style>
