budowanie troche pandoc poprawilem lol

--- a/doc/doc.css
+++ b/doc/doc.css
@@ -45,4 +45,10 @@ body {
 pre, code, .sourceCode, .sourceCode * {
   font-family: apl, monospace !important;
 }
+
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
 </style>
